--- a/lifeblood-ops-assistant/env.template
+++ b/lifeblood-ops-assistant/env.template
@@ -1,6 +1,6 @@
 GEMINI_API_KEY=
 GEMINI_MODEL=gemini-2.5-flash
 GEMINI_EMBED_MODEL=gemini-embedding-001
-LLM_PROVIDER=gemini
-EMBED_PROVIDER=gemini
+LLM_PROVIDER=fake
+EMBED_PROVIDER=fake
 CHROMA_PERSIST_DIR=.chroma
