--- a/lifeblood-ops-assistant/env.template
+++ b/lifeblood-ops-assistant/env.template
@@ -1,6 +1,6 @@
 GEMINI_API_KEY=
-GEMINI_MODEL=gemini-2.5-flash
-GEMINI_EMBED_MODEL=gemini-embedding-001
-LLM_PROVIDER=fake
-EMBED_PROVIDER=fake
+GEMINI_MODEL=gemini-1.5-flash
+GEMINI_EMBED_MODEL=models/text-embedding-004
+LLM_PROVIDER=gemini
+EMBED_PROVIDER=gemini
 CHROMA_PERSIST_DIR=.chroma
