Enhance environment configuration by adding GOOGLE_API_KEY, update dependencies for LangChain integration, and refactor RAG pipeline to utilize LangChain components for embeddings, vector store, and LLM. Improve error handling and logging throughout the API routes for better debugging and user feedback.

--- a/lifeblood-ops-assistant/environment.yml
+++ b/lifeblood-ops-assistant/environment.yml
@@ -15,3 +15,9 @@ dependencies:
     - numpy
     - pytest
     - httpx
+    - langchain
+    - langchain-core
+    - langchain-community
+    - langchain-google-genai
+    - langchain-chroma
+    - langchain-text-splitters
