--- a/lifeblood-ops-assistant/infra/docker/Dockerfile.web
+++ b/lifeblood-ops-assistant/infra/docker/Dockerfile.web
@@ -1,24 +1,71 @@
-# Dockerfile for Web
-# Placeholder Dockerfile for the web service
-
-FROM node:18-alpine
+# Multi-stage build for React frontend
+# Stage 1: Build
+FROM node:18-alpine AS builder
 
 WORKDIR /app
 
 # Copy package files
-# COPY package*.json ./
+COPY apps/web/package*.json ./
 
 # Install dependencies
-# RUN npm ci --only=production
+RUN npm ci
 
 # Copy source code
-# COPY . .
+COPY apps/web ./
+
+# Build argument for API URL (optional, defaults to /api for nginx proxy)
+ARG VITE_API_URL=/api
+ENV VITE_API_URL=${VITE_API_URL}
 
 # Build the application
-# RUN npm run build
+RUN npm run build
+
+# Stage 2: Production
+FROM nginx:alpine
+
+# Copy custom nginx config (optional)
+# COPY infra/docker/nginx.conf /etc/nginx/conf.d/default.conf
+
+# Copy built assets from builder stage
+COPY --from=builder /app/dist /usr/share/nginx/html
+
+# Copy a simple nginx config for SPA
+RUN echo 'server { \
+    listen 80; \
+    server_name localhost; \
+    root /usr/share/nginx/html; \
+    index index.html; \
+    \
+    # SPA routing - serve index.html for all routes \
+    location / { \
+        try_files $uri $uri/ /index.html; \
+    } \
+    \
+    # Proxy API requests to backend \
+    location /api/ { \
+        proxy_pass http://api:8000/; \
+        proxy_http_version 1.1; \
+        proxy_set_header Upgrade $http_upgrade; \
+        proxy_set_header Connection "upgrade"; \
+        proxy_set_header Host $host; \
+        proxy_set_header X-Real-IP $remote_addr; \
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; \
+        proxy_set_header X-Forwarded-Proto $scheme; \
+        proxy_cache_bypass $http_upgrade; \
+        proxy_read_timeout 300s; \
+        proxy_connect_timeout 75s; \
+    } \
+    \
+    # Health check endpoint \
+    location /health { \
+        access_log off; \
+        return 200 "healthy\n"; \
+        add_header Content-Type text/plain; \
+    } \
+}' > /etc/nginx/conf.d/default.conf
 
 # Expose port
-EXPOSE 3000
+EXPOSE 80
 
-# Start the application
-# CMD ["npm", "start"]
+# Start nginx
+CMD ["nginx", "-g", "daemon off;"]
